HelloUltraviolet/Fixtures/RejectedSource/Expressions/PipelineNotCallable/Source/Main.uv
//! Rejected pipeline specimen for a non-callable right-hand side.

public procedure pipelineNotCallableReference() -> i32 {
    return 1 => 2
}
